--- a/db/server/mariadb/compose.yaml
+++ b/db/server/mariadb/compose.yaml
@@ -8,33 +8,30 @@ services:
             TZ: "${TIMEZONE:-Europe/Warsaw}"
             MYSQL_DATABASE: "${DB_NAME:-default}"
             MYSQL_ROOT_PASSWORD: "${DB_ROOT_PASSWORD:-secret}"
-        # ports:
-        #     - ${DB_PORT:-3306}:3306
+        ports:
+            - ${DB_PORT:-3306}:3306
         networks:
-            main:
+            shared-network:
         volumes:
+            - shared-home:/home/${APP_USER:-app}
             - mariadb-data:/var/lib/mysql
             - mariadb-conf:/etc/mysql
             - ./docker/mariadb/bin/backup.sh:/bin/backup.sh:ro
             - ${BACKUP_DIR:-${HOME}/data/backups/docker/mariadb}:/backup
-        labels:
-            # ofelia.enabled: "true"
-            # ofelia.job-exec.mariadb.command: "/bin/backup.sh"
-            # ofelia.job-exec.mariadb.schedule: "${BACKUP_CRON_EXPRESSION:-0 9,15,17,21 * * *}"
-            # caddy: "${DOMAIN:-mariadb.localhost}"
-            # caddy.reverse_proxy: "{{upstreams 3306}}"
-            traefik.enable: "true"
-            traefik.tcp.services.mariadb.loadbalancer.server.port: "3306"
-            traefik.tcp.routers.mariadb.rule: "HostSNI(`${DOMAIN:-mariadb.localhost}`)"
-            traefik.tcp.routers.mariadb.entrypoints: "mysql"
-            traefik.tcp.routers.mariadb.tls: "true"
-            traefik.tcp.routers.mariadb.service: "mariadb"
+        # labels:
+        #     ofelia.enabled: "true"
+        #     ofelia.job-exec.mariadb.command: "/bin/backup.sh"
+        #     ofelia.job-exec.mariadb.schedule: "${BACKUP_CRON_EXPRESSION:-0 9,15,17,21 * * *}"
 
 networks:
-    main:
+    shared-network:
+        name: ${SHARED_NETWORK_NAME:-shared-network}
         external: true
 
 volumes:
+    shared-home:
+        name: ${SHARED_HOME_VOLUME:-shared-home}
+        external: true
     mariadb-data:
         name: mariadb-data
     mariadb-conf:
