--- a/apps/joplin/compose.yaml
+++ b/apps/joplin/compose.yaml
@@ -18,7 +18,9 @@ services:
         #     - ${JOPLIN_PORT:-22300}:22300
         hostname: "${DOMAIN:-joplin.localhost}"
         networks:
-            main:
+            shared-network:
+        volumes:
+            - shared-home:/home/${APP_USER:-app}
         labels:
             # caddy: "${DOMAIN:-joplin.localhost}"
             # caddy.reverse_proxy: "{{upstreams 8080}}"
@@ -34,5 +36,11 @@ services:
             traefik.http.routers.joplin-secure.service: "joplin"
 
 networks:
-    main:
+    shared-network:
+        name: ${SHARED_NETWORK_NAME:-shared-network}
+        external: true
+
+volumes:
+    shared-home:
+        name: ${SHARED_HOME_VOLUME:-shared-home}
         external: true
