--- a/db/server/mysql/compose.yaml
+++ b/db/server/mysql/compose.yaml
@@ -8,33 +8,30 @@ services:
             TZ: "${TIMEZONE:-Europe/Warsaw}"
             MYSQL_DATABASE: "${DB_NAME:-default}"
             MYSQL_ROOT_PASSWORD: "${DB_ROOT_PASSWORD:-secret}"
-        # ports:
-        #     - ${DB_PORT:-3306}:3306
+        ports:
+            - ${DB_PORT:-3306}:3306
         networks:
-            main:
+            shared-network:
         volumes:
+            - shared-home:/home/${APP_USER:-app}
             - mysql-data:/var/lib/mysql
             - mysql-conf:/etc/mysql
             - ./docker/mysql/bin/backup.sh:/bin/backup.sh:ro
             - ${BACKUP_DIR:-${HOME}/data/backups/docker/mysql}:/backup
-        labels:
-            # ofelia.enabled: "true"
-            # ofelia.job-exec.mysql.command: "/bin/backup.sh"
-            # ofelia.job-exec.mysql.schedule: "${BACKUP_CRON_EXPRESSION:-0 9,15,17,21 * * *}"
-            # caddy: "${DOMAIN:-mysql.localhost}"
-            # caddy.reverse_proxy: "{{upstreams 3306}}"
-            traefik.enable: "true"
-            traefik.tcp.services.mysql.loadbalancer.server.port: "3306"
-            traefik.tcp.routers.mysql.rule: "HostSNI(`${DOMAIN:-mysql.localhost}`)"
-            traefik.tcp.routers.mysql.entrypoints: "mysql"
-            traefik.tcp.routers.mysql.tls: "true"
-            traefik.tcp.routers.mysql.service: "mysql"
+        # labels:
+        #     ofelia.enabled: "true"
+        #     ofelia.job-exec.mysql.command: "/bin/backup.sh"
+        #     ofelia.job-exec.mysql.schedule: "${BACKUP_CRON_EXPRESSION:-0 9,15,17,21 * * *}"
 
 networks:
-    main:
+    shared-network:
+        name: ${SHARED_NETWORK_NAME:-shared-network}
         external: true
 
 volumes:
+    shared-home:
+        name: ${SHARED_HOME_VOLUME:-shared-home}
+        external: true
     mysql-data:
         name: mysql-data
     mysql-conf:
