--- a/db/server/percona5/compose.yaml
+++ b/db/server/percona5/compose.yaml
@@ -8,33 +8,30 @@ services:
             TZ: "${TIMEZONE:-Europe/Warsaw}"
             MYSQL_DATABASE: "${DB_NAME:-default}"
             MYSQL_ROOT_PASSWORD: "${DB_ROOT_PASSWORD:-secret}"
-        # ports:
-        #     - ${DB_PORT:-3306}:3306
+        ports:
+            - ${DB_PORT:-3306}:3306
         networks:
-            main:
+            shared-network:
         volumes:
+            - shared-home:/home/${APP_USER:-app}
             - percona5-data:/var/lib/mysql
             - percona5-conf:/etc/mysql
             - ./docker/percona5/bin/backup.sh:/bin/backup.sh:ro
             - ${BACKUP_DIR:-${HOME}/data/backups/docker/percona5}:/backup
-        labels:
-            # ofelia.enabled: "true"
-            # ofelia.job-exec.percona5.command: "/bin/backup.sh"
-            # ofelia.job-exec.percona5.schedule: "${BACKUP_CRON_EXPRESSION:-0 9,15,17,21 * * *}"
-            # caddy: "${DOMAIN:-percona5.localhost}"
-            # caddy.reverse_proxy: "{{upstreams 3306}}"
-            traefik.enable: "true"
-            traefik.tcp.services.percona5.loadbalancer.server.port: "3306"
-            traefik.tcp.routers.percona5.rule: "HostSNI(`${DOMAIN:-percona5.localhost}`)"
-            traefik.tcp.routers.percona5.entrypoints: "mysql"
-            traefik.tcp.routers.percona5.tls: "true"
-            traefik.tcp.routers.percona5.service: "percona5"
+        # labels:
+        #     ofelia.enabled: "true"
+        #     ofelia.job-exec.percona5.command: "/bin/backup.sh"
+        #     ofelia.job-exec.percona5.schedule: "${BACKUP_CRON_EXPRESSION:-0 9,15,17,21 * * *}"
 
 networks:
-    main:
+    shared-network:
+        name: ${SHARED_NETWORK_NAME:-shared-network}
         external: true
 
 volumes:
+    shared-home:
+        name: ${SHARED_HOME_VOLUME:-shared-home}
+        external: true
     percona5-data:
         name: percona5-data
     percona5-conf:
