--- a/db/server/postgres/compose.yaml
+++ b/db/server/postgres/compose.yaml
@@ -9,31 +9,28 @@ services:
             POSTGRES_USER: "${DB_USER:-root}"
             POSTGRES_PASSWORD: "${DB_PASSWORD:-secret}"
             POSTGRES_DB: "${DB_NAME:-default}"
-        # ports:
-        #     - ${DB_PORT:-5432}:5432
+        ports:
+            - ${DB_PORT:-5432}:5432
         networks:
-            main:
+            shared-network:
         volumes:
+            - shared-home:/home/${APP_USER:-app}
             - postgres:/var/lib/postgresql/data
             - ./docker/postgres/bin/backup.sh:/bin/backup.sh:ro
             - ${BACKUP_DIR:-${HOME}/data/backups/docker/postgres}:/backup
-        labels:
-            # ofelia.enabled: "true"
-            # ofelia.job-exec.postgres.command: "/bin/backup.sh"
-            # ofelia.job-exec.postgres.schedule: "${BACKUP_CRON_EXPRESSION:-0 9,15,17,21 * * *}"
-            # caddy: "${DOMAIN:-postgres.localhost}"
-            # caddy.reverse_proxy: "{{upstreams 5432}}"
-            traefik.enable: "true"
-            traefik.tcp.services.postgres.loadbalancer.server.port: "5432"
-            traefik.tcp.routers.postgres.rule: "HostSNI(`${DOMAIN:-postgres.localhost}`)"
-            traefik.tcp.routers.postgres.entrypoints: "postgres"
-            traefik.tcp.routers.postgres.tls: "true"
-            traefik.tcp.routers.postgres.service: "postgres"
+        # labels:
+        #     ofelia.enabled: "true"
+        #     ofelia.job-exec.postgres.command: "/bin/backup.sh"
+        #     ofelia.job-exec.postgres.schedule: "${BACKUP_CRON_EXPRESSION:-0 9,15,17,21 * * *}"
 
 networks:
-    main:
+    shared-network:
+        name: ${SHARED_NETWORK_NAME:-shared-network}
         external: true
 
 volumes:
+    shared-home:
+        name: ${SHARED_HOME_VOLUME:-shared-home}
+        external: true
     postgres:
         name: postgres
