--- a/db/server/valkey/compose.yaml
+++ b/db/server/valkey/compose.yaml
@@ -7,26 +7,22 @@ services:
         # user: "${UID:-1000}:${GID:-1000}"
         environment:
             TZ: "${TIMEZONE:-Europe/Warsaw}"
-        # ports:
-        #     - ${VALKEY_PORT:-6379}:6379
+        ports:
+            - ${VALKEY_PORT:-6379}:6379
         networks:
-            main:
+            shared-network:
         volumes:
+            - shared-home:/home/${APP_USER:-app}
             - valkey-data:/data
-        labels:
-            # caddy: "${DOMAIN:-valkey.localhost}"
-            # caddy.reverse_proxy: "{{upstreams 6379}}"
-            traefik.enable: "true"
-            traefik.tcp.services.valkey.loadbalancer.server.port: "6379"
-            traefik.tcp.routers.valkey.rule: "HostSNI(`${DOMAIN:-valkey.localhost}`)"
-            traefik.tcp.routers.valkey.entrypoints: "redis"
-            traefik.tcp.routers.valkey.tls: "true"
-            traefik.tcp.routers.valkey.service: "valkey"
 
 networks:
-    main:
+    shared-network:
+        name: ${SHARED_NETWORK_NAME:-shared-network}
         external: true
 
 volumes:
+    shared-home:
+        name: ${SHARED_HOME_VOLUME:-shared-home}
+        external: true
     valkey-data:
         name: valkey-data
