--- a/reverse-proxy/caddy-labels/compose.example.yaml
+++ b/reverse-proxy/caddy-labels/compose.example.yaml
@@ -7,11 +7,19 @@ services:
         environment:
             TZ: "${TIMEZONE:-Europe/Warsaw}"
         networks:
-            main:
+            shared-network:
+        volumes:
+            - shared-home:/home/${APP_USER:-app}
         labels:
             caddy: "${DOMAIN:-whoami.localhost}"
             caddy.reverse_proxy: "{{upstreams http}}"
 
 networks:
-    main:
+    shared-network:
+        name: ${SHARED_NETWORK_NAME:-shared-network}
+        external: true
+
+volumes:
+    shared-home:
+        name: ${SHARED_HOME_VOLUME:-shared-home}
         external: true
