--- a/reverse-proxy/traefik/compose.example.yaml
+++ b/reverse-proxy/traefik/compose.example.yaml
@@ -8,7 +8,9 @@ services:
             TZ: "${TIMEZONE:-Europe/Warsaw}"
         hostname: "${DOMAIN:-whoami.localhost}"
         networks:
-            main:
+            shared-network:
+        volumes:
+            - shared-home:/home/${APP_USER:-app}
         labels:
             traefik.enable: "true"
             traefik.http.services.whoami.loadbalancer.server.port: "80"
@@ -35,5 +37,11 @@ services:
             # traefik.http.routers.whoami-port8080.service: "whoami-port8080"
 
 networks:
-    main:
+    shared-network:
+        name: ${SHARED_NETWORK_NAME:-shared-network}
+        external: true
+
+volumes:
+    shared-home:
+        name: ${SHARED_HOME_VOLUME:-shared-home}
         external: true
