--- a/services/cron/compose.yaml
+++ b/services/cron/compose.yaml
@@ -8,10 +8,17 @@ services:
         environment:
             TIMEZONE: "${TIMEZONE:-Europe/Warsaw}"
         networks:
-            main:
+            shared-network:
         volumes:
             - /var/run/docker.sock:/var/run/docker.sock:ro
+            - shared-home:/home/${APP_USER:-app}
 
 networks:
-    main:
+    shared-network:
+        name: ${SHARED_NETWORK_NAME:-shared-network}
+        external: true
+
+volumes:
+    shared-home:
+        name: ${SHARED_HOME_VOLUME:-shared-home}
         external: true
