--- a/mail/server/mailserver/compose.yaml
+++ b/mail/server/mailserver/compose.yaml
@@ -1,7 +1,7 @@
 services:
     mailserver:
         container_name: mailserver
-        image: ghcr.io/docker-mailserver/docker-mailserver
+        image: mailserver/docker-mailserver
         restart: unless-stopped
         # user: "${UID:-1000}:${GID:-1000}"
         environment:
@@ -9,6 +9,8 @@ services:
             ENABLE_RSPAMD: "${ENABLE_RSPAMD:-1}"
             ENABLE_CLAMAV: "${ENABLE_CLAMAV:-1}"
             ENABLE_FAIL2BAN: "${ENABLE_FAIL2BAN:-1}"
+        cap_add:
+            - NET_ADMIN # For Fail2Ban to work
         ports:
             - "25:25"
             - "465:465"
