--- a/mail/client/mailpit/compose.yaml
+++ b/mail/client/mailpit/compose.yaml
@@ -8,9 +8,9 @@ services:
             TZ: "${TIMEZONE:-Europe/Warsaw}"
             MP_SMTP_AUTH_ACCEPT_ANY: "${MP_SMTP_AUTH_ACCEPT_ANY:-1}"
             MP_SMTP_AUTH_ALLOW_INSECURE: "${MP_SMTP_AUTH_ALLOW_INSECURE:-1}"
-        ports:
-            # - ${MAILPIT_PORT:-8025}:8025
-            - ${MAILPIT_SMTP_PORT:-1025}:1025
+        # ports:
+        #     - ${MAILPIT_PORT:-8025}:8025
+        #     - ${MAILPIT_SMTP_PORT:-1025}:1025
         hostname: "${DOMAIN:-mailpit.localhost}"
         networks:
             shared-network:
