--- a/apps/affine/compose.yaml
+++ b/apps/affine/compose.yaml
@@ -6,6 +6,8 @@ services:
         depends_on:
             affine_migration:
                 condition: service_completed_successfully
+            postgres:
+                condition: service_started
         # user: "${UID:-1000}:${GID:-1000}"
         environment:
             TZ: "${TIMEZONE:-Europe/Warsaw}"
@@ -39,7 +41,10 @@ services:
     affine_migration:
         container_name: affine_migration
         image: ghcr.io/toeverything/affine:${AFFINE_REVISION:-stable}
-        command: ['sh', '-c', 'node ./scripts/self-host-predeploy.js']
+        command: [ 'sh', '-c', 'node ./scripts/self-host-predeploy.js' ]
+        depends_on:
+            postgres:
+                condition: service_started
         # user: "${UID:-1000}:${GID:-1000}"
         environment:
             TZ: "${TIMEZONE:-Europe/Warsaw}"
