--- a/apps/joplin/compose.yaml
+++ b/apps/joplin/compose.yaml
@@ -3,6 +3,9 @@ services:
         container_name: joplin
         image: joplin/server
         restart: unless-stopped
+        depends_on:
+            postgres:
+                condition: service_started
         # user: "${UID:-1000}:${GID:-1000}"
         environment:
             TZ: "${TIMEZONE:-Europe/Warsaw}"
