--- a/db/server/mysql/compose.yaml
+++ b/db/server/mysql/compose.yaml
@@ -18,10 +18,10 @@ services:
             - mysql-conf:/etc/mysql
             - ./docker/mysql/bin/backup.sh:/bin/backup.sh:ro
             - ${BACKUP_DIR:-${HOME}/data/backups/docker/mysql}:/backup
-        # labels:
-        #     ofelia.enabled: "true"
-        #     ofelia.job-exec.mysql.command: "/bin/backup.sh"
-        #     ofelia.job-exec.mysql.schedule: "${BACKUP_CRON_EXPRESSION:-0 9,15,17,21 * * *}"
+        labels:
+            ofelia.enabled: "true"
+            ofelia.job-exec.mysql.command: "/bin/backup.sh"
+            ofelia.job-exec.mysql.schedule: "${BACKUP_CRON_EXPRESSION:-0 9,15,17,21 * * *}"
 
 networks:
     shared-network:
