--- a/db/server/pgvector/compose.yaml
+++ b/db/server/pgvector/compose.yaml
@@ -3,6 +3,9 @@ services:
         container_name: pgvector
         image: pgvector/pgvector
         restart: unless-stopped
+        depends_on:
+            postgres:
+                condition: service_started
         # user: "${UID:-1000}:${GID:-1000}"
         environment:
             TZ: "${TIMEZONE:-Europe/Warsaw}"
@@ -18,10 +21,10 @@ services:
             - pgvector:/var/lib/postgresql/data
             - ./docker/pgvector/bin/backup.sh:/bin/backup.sh:ro
             - ${BACKUP_DIR:-${HOME}/data/backups/docker/pgvector}:/backup
-        # labels:
-        #     ofelia.enabled: "true"
-        #     ofelia.job-exec.pgvector.command: "/bin/backup.sh"
-        #     ofelia.job-exec.pgvector.schedule: "${BACKUP_CRON_EXPRESSION:-0 9,15,17,21 * * *}"
+        labels:
+            ofelia.enabled: "true"
+            ofelia.job-exec.pgvector.command: "/bin/backup.sh"
+            ofelia.job-exec.pgvector.schedule: "${BACKUP_CRON_EXPRESSION:-0 9,15,17,21 * * *}"
 
 networks:
     shared-network:
