--- a/db/server/postgres/compose.yaml
+++ b/db/server/postgres/compose.yaml
@@ -18,10 +18,10 @@ services:
             - postgres:/var/lib/postgresql/data
             - ./docker/postgres/bin/backup.sh:/bin/backup.sh:ro
             - ${BACKUP_DIR:-${HOME}/data/backups/docker/postgres}:/backup
-        # labels:
-        #     ofelia.enabled: "true"
-        #     ofelia.job-exec.postgres.command: "/bin/backup.sh"
-        #     ofelia.job-exec.postgres.schedule: "${BACKUP_CRON_EXPRESSION:-0 9,15,17,21 * * *}"
+        labels:
+            ofelia.enabled: "true"
+            ofelia.job-exec.postgres.command: "/bin/backup.sh"
+            ofelia.job-exec.postgres.schedule: "${BACKUP_CRON_EXPRESSION:-0 9,15,17,21 * * *}"
 
 networks:
     shared-network:
