--- a/reverse-proxy/caddy-labels/compose.yaml
+++ b/reverse-proxy/caddy-labels/compose.yaml
@@ -6,11 +6,12 @@ services:
         # user: "${UID:-1000}:${GID:-1000}"
         environment:
             TZ: "${TIMEZONE:-Europe/Warsaw}"
-            CADDY_INGRESS_NETWORKS: "${CADDY_INGRESS_NETWORKS:-main}"
+            CADDY_INGRESS_NETWORKS: "${CADDY_INGRESS_NETWORKS:-shared-network}"
         ports:
             - 2019:2020
             - 80:80
-            - 443:443
+            - 443:443/tcp
+            - 443:443/udp
             - 5173:5173
         networks:
             shared-network:
