--- a/reverse-proxy/traefik/compose.yaml
+++ b/reverse-proxy/traefik/compose.yaml
@@ -8,7 +8,8 @@ services:
             TZ: "${TIMEZONE:-Europe/Warsaw}"
         ports:
             - 80:80
-            - 443:443
+            - 443:443/tcp
+            - 443:443/udp
             - 5173:5173
         hostname: "${DOMAIN:-traefik.localhost}"
         networks:
