--- a/db/server/valkey/compose.yaml
+++ b/db/server/valkey/compose.yaml
@@ -1,7 +1,7 @@
 services:
     valkey:
         container_name: valkey
-        image: valkey/valkey:alpine
+        image: valkey/valkey
         restart: unless-stopped
         command: valkey-server --save 60 1 --loglevel warning
         # user: "${UID:-1000}:${GID:-1000}"
