--- a/services/shared-home/compose.yaml
+++ b/services/shared-home/compose.yaml
@@ -1,7 +1,7 @@
 services:
     shared-home:
         container_name: shared-home
-        image: alpine
+        image: debian:stable-slim
         command: chown -R ${UID:-1000}:${GID:-1000} /home/${APP_USER:-app}
         restart: no
         user: root
