--- a/db/server/postgres/compose.yaml
+++ b/db/server/postgres/compose.yaml
@@ -1,7 +1,7 @@
 services:
     postgres:
         container_name: postgres
-        image: postgres:alpine
+        image: postgres
         restart: unless-stopped
         # user: "${UID:-1000}:${GID:-1000}"
         environment:
