--- a/db/server/redis/compose.yaml
+++ b/db/server/redis/compose.yaml
@@ -1,7 +1,7 @@
 services:
     redis:
         container_name: redis
-        image: redis:alpine
+        image: redis
         restart: unless-stopped
         command: redis-server --save 60 1 --loglevel warning --requirepass secret
         # user: "${UID:-1000}:${GID:-1000}"
