--- a/message-broker/rabbitmq/compose.yaml
+++ b/message-broker/rabbitmq/compose.yaml
@@ -1,7 +1,7 @@
 services:
     rabbitmq:
         container_name: rabbitmq
-        image: rabbitmq:management-alpine
+        image: rabbitmq:management
         restart: unless-stopped
         # user: "${UID:-1000}:${GID:-1000}"
         environment:
