--- a/db/server/pgvector/compose.yaml
+++ b/db/server/pgvector/compose.yaml
@@ -15,7 +15,7 @@ services:
             shared-network:
         volumes:
             - shared-home:/home/${APP_USER:-app}
-            - pgvector:/var/lib/postgresql/data
+            - pgvector:/var/lib/postgresql
             - ./docker/pgvector/bin/backup.sh:/bin/backup.sh:ro
             - ${BACKUP_DIR:-${HOME}/data/backups/docker/pgvector}:/backup
         labels:
