--- a/db/server/postgres/compose.yaml
+++ b/db/server/postgres/compose.yaml
@@ -15,7 +15,7 @@ services:
             shared-network:
         volumes:
             - shared-home:/home/${APP_USER:-app}
-            - postgres:/var/lib/postgresql/data
+            - postgres:/var/lib/postgresql
             - ./docker/postgres/bin/backup.sh:/bin/backup.sh:ro
             - ${BACKUP_DIR:-${HOME}/data/backups/docker/postgres}:/backup
         labels:
